MIMIC tool